--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1" />
     <link rel="stylesheet" href="jot.css">
-    <title>Document</title>
+    <title>SURVEY FORM</title>
 </head>
 <body>
     <div class="background">
